--- a/index.html
+++ b/index.html
@@ -60,53 +60,45 @@
 </section>
 
 
-
-<br><br>
+<br/><br/>
 
 
 <section class="hero teaser">
-<!-- <section> -->
     <div class="columns is-centered has-text-centered">
   
       <div class="container is-max-desktop">
   
           <div class="hero-body">
-
-            <h2 class="title is-5">Qualitative comparisons between LaRa and the proposed VS-Splat</h2>
+            <h2 class="title is-3" style="margin-bottom: 0px">Video results</h2>
+            <hr/>
+            <h2 class="title is-4" style="margin-bottom: 0px">Comparisons between LaRa and the proposed VS-Splat (GObjaverse)</h2>
 
             <video id="teaser" autoplay muted loop playsinline height="100%">
-                <source src="./static/videos/comparison_gobj.mp4"
-                        type="video/mp4">
+              <source src="./static/videos/comparison_gobj.mp4"
+                      type="video/mp4">
             </video>
-
+            
+            <hr/>
+            <h2 class="title is-4" style="margin-bottom: 0px">Comparisons between LaRa and the proposed VS-Splat (GSO)</h2>
             <video id="teaser" autoplay muted loop playsinline height="100%">
                 <source src="./static/videos/comparison_gso.mp4"
                         type="video/mp4">
             </video>
 
-            <!-- <h2 class="subtitle has-text-centered">
-                Qualitative comparisons between LaRa and the proposed VS-Splat.
-            </h2> -->
-
-            <br><br><br><br>
-
-            <h2 class="title is-5">Additional qualitative results from the proposed VS-Splat</h2>
+            <hr/>
+            <h2 class="title is-4" style="margin-bottom: 0px">Additional results from the proposed VS-Splat</h2>
 
             <video id="teaser" autoplay muted loop playsinline height="100%">
-                <source src="./static/videos/comparison_gobj.mp4"
+                <source src="./static/videos/ours.mp4"
                         type="video/mp4">
             </video>
-
-            <!-- <h2 class="subtitle has-text-centered">
-                Additional qualitative results from the proposed VS-Splat.
-            </h2> -->
-
 
           </div>
       </div>
   
     </div>
 </section>
+
 
 
 
