--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
 
 
 
-
 <body>
 
 
@@ -76,14 +75,14 @@
             <h2 class="title is-4" style="margin-bottom: 0px">Comparisons between LaRa and the proposed VS-Splat (GObjaverse)</h2>
 
             <video id="teaser" autoplay muted loop playsinline height="100%">
-              <source src="./static/videos/comparison_gobj.mp4"
+              <source src="./static/videos/comp_gobj.mp4"
                       type="video/mp4">
             </video>
             
             <hr/>
             <h2 class="title is-4" style="margin-bottom: 0px">Comparisons between LaRa and the proposed VS-Splat (GSO)</h2>
             <video id="teaser" autoplay muted loop playsinline height="100%">
-                <source src="./static/videos/comparison_gso.mp4"
+                <source src="./static/videos/comp_gso.mp4"
                         type="video/mp4">
             </video>
 
