add google search console

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     
   <meta name="keywords" content="VS-Splat, VS Splat, vs-splat, vs splat">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="google-site-verification" content="k-y-RQo4XO7SoC-tqBMCZ4H6p1XwQqKqXdK2nOQFFNk" />
   
 
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
