--- a/index.html
+++ b/index.html
@@ -50,11 +50,6 @@
             VS-Splat: Voxel-Selective Feed-Forward Gaussian Splatting for End-to-End 3D Object Reconstruction from Sparse-Views
           </h1>
           
-          <div class="is-size-5 publication-authors">
-            <span class="author-block">
-              Anonymous submission
-            <span class="author-block">
-          </div>
         </div>
       </div>
     </div>
@@ -73,7 +68,7 @@
           <div class="hero-body">
             <h2 class="title is-3" style="margin-bottom: 0px">Video results</h2>
             <hr/>
-            <h2 class="title is-4" style="margin-bottom: 0px">Comparisons between LaRa and the proposed VS-Splat (GObjaverse)</h2>
+            <h2 class="title is-4" style="margin-bottom: 0px">Comparisons between LaRa and the proposed VS-Splat model (GObjaverse)</h2>
 
             <video id="teaser" autoplay muted loop playsinline height="100%">
               <source src="./static/videos/comp_gobj.mp4"
@@ -81,14 +76,14 @@
             </video>
             
             <hr/>
-            <h2 class="title is-4" style="margin-bottom: 0px">Comparisons between LaRa and the proposed VS-Splat (GSO)</h2>
+            <h2 class="title is-4" style="margin-bottom: 0px">Comparisons between LaRa and the proposed VS-Splat model (GSO)</h2>
             <video id="teaser" autoplay muted loop playsinline height="100%">
                 <source src="./static/videos/comp_gso.mp4"
                         type="video/mp4">
             </video>
 
             <hr/>
-            <h2 class="title is-4" style="margin-bottom: 0px">Additional results from the proposed VS-Splat</h2>
+            <h2 class="title is-4" style="margin-bottom: 0px">Additional results from the proposed VS-Splat model</h2>
 
             <video id="teaser" autoplay muted loop playsinline height="100%">
                 <source src="./static/videos/ours.mp4"
