--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="column has-text-centered">
           
           <h1 class="title is-1 publication-title">
-            VS-Splat: Voxel-Selective Feed-Forward Gaussian Splatting for End-to-End 3D Object Reconstruction from Sparse-Views
+            VS-Splat: Voxel-Selective feed-forward Gaussian Splatting for end-to-end 3D object reconstruction from sparse-views
           </h1>
           
         </div>
