--- a/index.html
+++ b/index.html
@@ -60,6 +60,33 @@
 <br/><br/>
 
 
+<section class="hero is-light is-small">
+  
+  <div class="container is-max-desktop" style="margin-top: 20px; margin-bottom: 20px;">
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
+        <h2 class="title is-3">Abstract</h2>
+        <div class="content has-text-justified">
+          <p>
+            Feed-forward Gaussian splatting models have demonstrated remarkable effectiveness in reconstructing three-dimensional (3D) objects or scenes from a few two-dimensional (2D) images, even if they are unseen. 
+            As existing methods typically generate Gaussian primitives uniformly across the 3D space, most primitives are placed in non-object regions. 
+            This may hinder the representation of fine object details. 
+            This paper proposes a Voxel-Selective Gaussian Splatting model (<b>VS-Splat</b>), 
+            the first end-to-end feed-forward Gaussian splatting framework that generates many primitives only within selected voxels that are likely to belong to an object, 
+            without 3D structural supervision. 
+            To achieve this, we propose a new learnable voxel selection approach that identifies object-centric voxels only with 2D rendering supervision. 
+            Our sparse-view rendering experiments with three benchmark datasets show that proposed VS-Splat outperforms several state-of-the-art methods.
+          </p>
+        </div>
+      </div>
+    </div>
+    
+</section>
+
+
+<br/><br/><br/>
+
+
 <section class="hero teaser">
     <div class="columns is-centered has-text-centered">
   
